test/files/neg/t7171b.check
t7171b.scala:4: warning: The outer reference in this type test cannot be checked at run time.
  final case class A()
                   ^
t7171b.scala:10: warning: The outer reference in this type test cannot be checked at run time.
    case _: A => true; case _ => false
          ^
t7171b.scala:15: warning: The outer reference in this type test cannot be checked at run time.
    case _: A => true; case _ => false
          ^
error: No warnings can be incurred under -Xfatal-warnings.
three warnings found
one error found
